src/test/ui/suggestions/pub-ident-missing-kw.stderr
error: missing `struct` for struct definition
  --> $DIR/pub-ident-missing-kw.rs:11:4
   |
11 | pub Struct {
   |    ^
   |
help: add `struct` here to parse `Struct` as a public struct
   |
11 | pub struct Struct {
   |     ^^^^^^

error: missing `struct` for struct definition
  --> $DIR/pub-ident-missing-kw.rs:15:4
   |
15 | pub Y {
   |    ^
   |
help: add `struct` here to parse `Y` as a public struct
   |
15 | pub struct Y {
   |     ^^^^^^

error: expected `:`, found `(`
  --> $DIR/pub-ident-missing-kw.rs:20:8
   |
20 |     foo();
   |        ^

error: missing `struct` for struct definition
  --> $DIR/pub-ident-missing-kw.rs:23:4
   |
23 | pub Z {
   |    ^
   |
help: add `struct` here to parse `Z` as a public struct
   |
23 | pub struct Z {
   |     ^^^^^^

error: missing `fn` for fn definition
  --> $DIR/pub-ident-missing-kw.rs:27:4
   |
27 | pub foo(foo) {
   |    ^
   |
help: add `fn` here to parse `foo` as a public fn
   |
27 | pub fn foo(foo) {
   |     ^^

error: expected `:`, found `(`
  --> $DIR/pub-ident-missing-kw.rs:32:8
   |
32 |     foo();
   |        ^

error: missing `struct` for struct definition
  --> $DIR/pub-ident-missing-kw.rs:35:4
   |
35 | pub Z {
   |    ^
   |
help: add `struct` here to parse `Z` as a public struct
   |
35 | pub struct Z {
   |     ^^^^^^

error: aborting due to 7 previous errors

